--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  padding: 60px;
+}
+
+input {
+  width: 100%;
+  font-size: 1, 2rem;
+  margin: 10px 0;
+}
+
+.card {
+  border: 1px solid grey;
+  border-radius: 6px;
+  overflow: hidden;
+  margin: 0 10px 10px 0;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+}
+
+.card p {
+  padding: 5px;
+  text-align: center;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.category-title {
+  margin: 10px 0;
+  text-transform: capitalize;
+}
+
+@media (max-width: 800px) {
+  .card {
+    width: 500px;
+  }
 }
